test/valid/56311_equals/equals_method.agu
-- Author: tcomp56311, João Vedor

let equals(n, m): (Int, Int) -> Bool =
    n == m

let main(_) : Unit -> Unit = 
    print(equals(4, 5))