test/invalid-syntax/58168_invalidIdentifier/58168_invalidIdentifier.agu
-- Author: 58168, Henrique Costa Vale

let _ : Unit =
  let 3 : Int = 4